# JdRtheque

./: .gitignore  App.py  ExemplesBDD.txt  README.md  bdd_modeles.js  config.py  data_manager.py  index.js  jdrthequeDevDB.db  models.py  package.json  pyproject.toml  requirements.txt  webforms.py
app_functionnalities/music_management/: data_manager.py  models.py  webforms.py
app_functionnalities/user_management/: models.py  webforms.py
flask-version/: config.py
flask-version/app_functionnalities/music_management/: data_manager.py
flask-version/app_functionnalities/user_management/: data_manager.py
flask-version/migrations/versions/: 99ce859ab064_added_by_user_id_column_added_to_music_.py
flask-version/templates/: music_search.html  register.html  style_scene_add.html
jdrtheque/: manage.py
jdrtheque/jdrtheque/: asgi.py  settings.py  urls.py  views.py  wsgi.py
jdrtheque/media/: do_not_delete.txt
jdrtheque/music/: admin.py  forms.py  models.py  urls.py  views.py
jdrtheque/resources/: admin.py  forms.py  models.py  urls.py  views.py
jdrtheque/templates/: base_template.html  home.html
jdrtheque/user/: urls.py  views.py
migrations/versions/: 21e15dd74cf4_music_user_style_scene_playlist_music_.py  4eb4bae04a02_db_re_creation.py  e88f663816eb_recreate_the_db.py
static/css/: header.css
templates/: account.html  base_template.html  index.html  login.html  music_add.html  music_search.html  register.html
views/pages/: index.ejs  login.ejs  register.ejs
views/partials/: footer.ejs  head.ejs  header.ejs  lateral_pannel_music.ejs
(+16 files in other folders)
