[tool.poetry]
name = "jdrtheque"
version = "0.1.0"
description = "Projet de plate-forme de ressources pour le jeu de rôle."
authors = ["Lucile Lévêque"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1"
pafy = "^0.5.5"
youtube_dl = "^2021.12.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
